// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/FileUploader Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r6:"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r6:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div id=":r7:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5 dummyClassname "
       lang="en"
       data-testid="123ID"
  >
    <div tabindex="-1">
    </div>
    <button type="button"
            id="htmlId"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for="htmlId"
        >
          Legg til fil
        </label>
        <input data-testid="123ID-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div id=":r4:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  dummyClassname">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r2j:"
            class="_dropZone_6otu2_14 _dropZone_error_6otu2_29 "
            aria-describedby=":r2k:-fileuploader-error "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r2j:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div id=":r2k:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1kdf4_15 dummyClassname">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1kdf4_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1kdf4_30">
          feil
        </p>
      </div>
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithError play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <label id="labelId-:r12:"
           class="_label_348na_5"
           for=":r10:"
    >
      Hemmelig kode
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r12:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r13:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r13:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r10:"
            class="_dropZone_6otu2_14 _dropZone_error_6otu2_29 "
            aria-describedby=":r11:-fileuploader-error :r10:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r10:"
        >
          Legg til fil(er)
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".java, .cpp, .py"
               multiple
               hidden
        >
      </div>
    </button>
    <span id=":r10:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_6otu2_71">
        .java, .cpp, .py
      </span>
    </span>
    <div id=":r11:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1kdf4_15 ">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1kdf4_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1kdf4_30">
          Du må laste opp en fil
        </p>
      </div>
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithFileChange play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  "
       data-testid="testid123"
  >
    <label id="labelId-:r27:"
           class="_label_348na_5"
           for=":r25:"
    >
      Dokumentasjon og grunnlag
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r27:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r28:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r28:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r25:"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r25:"
        >
          Legg til fil
        </label>
        <input data-testid="testid123-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div id=":r26:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":r2a:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <a id=":r2a:-file-file.txt"
               class="_link_z7jba_1  _fileListText_pqqzl_34 _fileListLink_pqqzl_47"
               href="#"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_z7jba_35 _icon_isCustom_z7jba_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              file.txt
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1 _successIconLinkMargin_pqqzl_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r2c:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r2c:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":r2a:-file-file.txt"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r2d:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r2d:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
      Kunne ikke fjerne fil
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <label id="labelId-:r2g:"
           class="_label_348na_5"
           for=":r2e:"
    >
      Last opp filer
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r2g:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2h:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2h:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r2e:"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r2e:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div id=":r2f:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithIsUploading smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":ru:"
            class="_dropZone_6otu2_14  "
            disabled
    >
      <div class="_removePointerEvents_6otu2_81">
        <div aria-live="polite"
             aria-atomic="true"
             class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28  "
        >
          <div class="_spinnerAnimation_wnf1f_40 ">
          </div>
          <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 _spinner_6otu2_89">
            Opplasting pågår
          </span>
        </div>
        <label class="_innerLabel_6otu2_95"
               for=":ru:"
        >
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div id=":rv:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  "
       id="dummyIdForwardedFromRef"
  >
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r0:"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r0:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div id=":r1:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithTextOverrides play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1u:"
            class="_dropZone_6otu2_14  "
            aria-describedby=" :r1u:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r1u:"
        >
          Trykk eller dra og slipp filer her
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept="image/png"
               hidden
        >
      </div>
    </button>
    <span id=":r1u:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Tillatte filformater:_
      <span class="_fileFormatList_6otu2_71">
        bilder og dokumenter
      </span>
    </span>
    <div id=":r1v:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":r21:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <span class="_fileListText_pqqzl_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_pqqzl_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r22:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r22:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":r21:-file-document.pdf"
                    class="_fileListFile_pqqzl_51"
              >
                document.pdf
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r23:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r23:">
                  lastet opp
                </title>
                <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":r21:-file-document.pdf"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r24:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r24:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithUploadResult smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5 bottomSpacingXL ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r16:"
            class="_dropZone_6otu2_14  "
            aria-describedby=" :r16:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r16:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".java, .cpp, .py"
               hidden
        >
      </div>
    </button>
    <span id=":r16:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_6otu2_71">
        .java, .cpp, .py
      </span>
    </span>
    <div id=":r17:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
      <div class="_alert_17bwy_1 _alert_success_17bwy_47  _alert_6otu2_85">
        <span class="_iconWrapper_17bwy_6">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_17bwy_6"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 2a10 10 0 0 1 10 10c0 5.523-4.477 10-10 10a10 10 0 0 1 0-20Zm-1 14.5 7-7-1.41-1.41L11 13.67l-3.09-3.08L6.5 12l4.5 4.5Z">
            </path>
          </svg>
        </span>
        <span class="_content_17bwy_15">
          Lastet opp 4 filer
        </span>
      </div>
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":r1a:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <a id=":r1a:-file-dokumentasjon.pdf"
               class="_link_z7jba_1  _fileListText_pqqzl_34 _fileListLink_pqqzl_47"
               href="https://www.skatteetaten.no/person/"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_z7jba_35 _icon_isCustom_z7jba_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              dokumentasjon.pdf
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1 _successIconLinkMargin_pqqzl_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r1c:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r1c:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":r1a:-file-dokumentasjon.pdf"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1d:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1d:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":r1e:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <span class="_fileListText_pqqzl_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_pqqzl_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1f:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1f:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":r1e:-file-grunnlag.jpg"
                    class="_fileListFile_pqqzl_51"
              >
                grunnlag.jpg
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1g:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1g:">
                  Fullført
                </title>
                <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":r1e:-file-grunnlag.jpg"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1h:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1h:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
  <div class="_container_6otu2_5  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1i:"
            class="_dropZone_6otu2_14  "
            aria-describedby=" :r1i:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r1i:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".java, .cpp, .py"
               hidden
        >
      </div>
    </button>
    <span id=":r1i:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_6otu2_71">
        .java, .cpp, .py
      </span>
    </span>
    <div id=":r1j:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
      <div class="_alert_17bwy_1 _alert_warning_17bwy_65  _alert_6otu2_85">
        <span class="_iconWrapper_17bwy_6">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_17bwy_6"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
            </path>
          </svg>
        </span>
        <span class="_content_17bwy_15">
          1 av 3 filer ble stoppet av virussjekk.
        </span>
      </div>
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":r1m:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <a id=":r1m:-file-dokumentasjon.pdf"
               class="_link_z7jba_1  _fileListText_pqqzl_34 _fileListLink_pqqzl_47"
               href="https://www.skatteetaten.no/person/"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_z7jba_35 _icon_isCustom_z7jba_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              dokumentasjon.pdf
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1 _successIconLinkMargin_pqqzl_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r1o:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r1o:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":r1m:-file-dokumentasjon.pdf"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1p:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1p:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":r1q:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <span class="_fileListText_pqqzl_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_pqqzl_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1r:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1r:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":r1q:-file-grunnlag.jpg"
                    class="_fileListFile_pqqzl_51"
              >
                grunnlag.jpg
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1s:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1s:">
                  Fullført
                </title>
                <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":r1q:-file-grunnlag.jpg"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1t:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1t:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithUploadedFiles play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <label id="labelId-:rb:"
           class="_label_348na_5"
           for=":r9:"
    >
      Dokumentasjon og grunnlag
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:rb:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rc:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rc:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r9:"
            class="_dropZone_6otu2_14  "
            aria-describedby=" :r9:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r9:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".pdf, .jpeg"
               hidden
        >
      </div>
    </button>
    <span id=":r9:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_6otu2_71">
        .pdf, .jpeg
      </span>
    </span>
    <div id=":ra:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":re:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <a id=":re:-file-dokumentasjon_rapport_med_langt_filnavn_v2_final.pdf"
               class="_link_z7jba_1  _fileListText_pqqzl_34 _fileListLink_pqqzl_47"
               href="https://www.skatteetaten.no/person/"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_z7jba_35 _icon_isCustom_z7jba_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              dokumentasjon_rapport_med_langt_filnavn_v2_final.pdf
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1 _successIconLinkMargin_pqqzl_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rg:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rg:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":re:-file-dokumentasjon_rapport_med_langt_filnavn_v2_final.pdf"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rh:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rh:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":ri:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <span class="_fileListText_pqqzl_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_pqqzl_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rj:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rj:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":ri:-file-grunnlag.jpg"
                    class="_fileListFile_pqqzl_51"
              >
                grunnlag.jpg
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rk:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rk:">
                  Fullført
                </title>
                <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":ri:-file-grunnlag.jpg"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rl:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rl:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":rm:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <span class="_fileListText_pqqzl_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_pqqzl_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rn:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rn:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":rm:-file-Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg"
                    class="_fileListFile_pqqzl_51"
              >
                Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ro:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ro:">
                  Fullført
                </title>
                <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":rm:-file-Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rp:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rp:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":rq:"
          class="_fileListItem_pqqzl_27 "
      >
        <div class="_fileListContainer_pqqzl_43">
          <span class="_fileListGrid_pqqzl_30">
            <a id=":rq:-file-test.png"
               class="_link_z7jba_1  _fileListText_pqqzl_34 _fileListLink_pqqzl_47"
               href="http://localhost:4400/designsystem_illustrasjon.png"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_z7jba_35 _icon_isCustom_z7jba_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              test.png
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_pqqzl_1 _successIconLinkMargin_pqqzl_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rs:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rs:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_pqqzl_9"
                    type="button"
                    aria-describedby=":rq:-file-test.png"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rt:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rt:">
                  Fjern fil
                </title>
                <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
